# physics-project-template

./: TEMPLATE.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.package_name}}/: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  justfile  mkdocs.yml  pyproject.toml
{{cookiecutter.package_name}}/.github/workflows/: ci.yml  docs.yml
{{cookiecutter.package_name}}/docs/: index.md  usage.md
{{cookiecutter.package_name}}/docs/api/: index.md
{{cookiecutter.package_name}}/docs/javascripts/: mathjax.js
{{cookiecutter.package_name}}/paper/: bibliography.bib  main.tex
{{cookiecutter.package_name}}/paper/sections/: methods.tex  results.tex
{{cookiecutter.package_name}}/scripts/: gen_ref_pages.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: _typing.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/core/: example.py
{{cookiecutter.package_name}}/tests/: conftest.py
{{cookiecutter.package_name}}/tests/unit/core/: test_example.py
