# ==============================================================================
# pyproject.toml — Python Style Contract
# {{cookiecutter.project_name}}
# ==============================================================================
# Toolchain: Ruff · mypy · pytest · coverage · MkDocs Material + mkdocstrings
# Build backend: hatchling (src/ layout; no setup.py)
# Environment: conda-first via environment.yml; pip deps declared here
# Docstring convention: NumPy (raw strings for LaTeX-heavy content)
# Target runtime: CPython {{cookiecutter.python_version}}+
# ==============================================================================

# ------------------------------------------------------------------------------
# BUILD SYSTEM
# ------------------------------------------------------------------------------
[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

# ------------------------------------------------------------------------------
# HATCHLING — src/ layout declaration
# ------------------------------------------------------------------------------
# Placed immediately after [build-system] to ensure Jinja2 renders it reliably.
# Without this, hatchling cannot locate the package under src/ and pip install
# fails with "Unable to determine which files to ship inside the wheel".
[tool.hatch.build.targets.wheel]
packages = ["src/{{cookiecutter.package_name}}"]

# ------------------------------------------------------------------------------
# PROJECT METADATA
# ------------------------------------------------------------------------------
[project]
name            = "{{cookiecutter.package_name}}"
version         = "0.1.0"
description     = "{{cookiecutter.project_name}}"
readme          = "README.md"
requires-python = ">={{cookiecutter.python_version}}"
license         = { text = "MIT" }
authors         = [{ name = "{{cookiecutter.author}}" }]

# Runtime dependencies — pip-installable Python packages only.
# System-level compiled deps (HDF5, OpenMPI, FFTW) belong in environment.yml;
# conda manages those. This list is the single source of truth for pip/uv.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.13",
    "h5py>=3.10",
    "astropy>=6.0",      # remove if not working with FITS / astronomical data
    "matplotlib>=3.8",
]

# Optional dependency groups — install with: pip install -e ".[dev]" or ".[docs]"
[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "types-PyYAML",      # stub package so mypy can type-check PyYAML imports
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-gen-files>=0.5",
]

# ==============================================================================
# RUFF — linter + formatter (replaces flake8, isort, black, pydocstyle)
# ==============================================================================
[tool.ruff]
line-length    = 120
target-version = "py{{cookiecutter.python_version.replace('.', '')}}"
src            = ["src", "tests"]

[tool.ruff.format]
indent-style              = "space"
quote-style               = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "E",    # pycodestyle — base style errors
    "W",    # pycodestyle — warnings (e.g. trailing whitespace)
    "F",    # Pyflakes   — unused variables / imports / undefined names
    "I",    # isort      — import ordering
    "ANN",  # flake8-annotations — enforce type hints
    "D",    # pydocstyle — docstring presence and format
    "N",    # pep8-naming — naming conventions (CamelCase classes, snake_case funcs)
    "UP",   # pyupgrade  — flag Python < 3.11 idioms (use | instead of Union, etc.)
    "B",    # flake8-bugbear — likely bugs & design issues
    "SIM",  # flake8-simplify — simplifiable constructs
    "TCH",  # flake8-type-checking — move pure-annotation imports into TYPE_CHECKING
    "RUF",  # Ruff-native rules — miscellaneous quality rules
]

ignore = [
    # ---- type annotation relaxations ----------------------------------------
    "ANN401",  # Allow Any — necessary for generic scientific code

    # ---- docstring relaxations for NumPy convention -------------------------
    "D100",
    "D203",
    "D213",

    # ---- stylistic noise ----------------------------------------------------
    "E501",
]

# Allow auto-fix for all fixable rules except the ones that produce surprises
fixable   = ["ALL"]
unfixable = [
    "F401",  # Never auto-remove unused imports — might be re-exported or needed at runtime
    "F841",  # Never auto-remove unused local variables — might be intentional (debugging)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py"   = ["ANN", "D"]
"tests/*.py"      = ["ANN", "D"]
"scripts/**/*.py" = ["D", "T20"]
"**/__init__.py"  = ["D", "F401"]

[tool.ruff.lint.isort]
known-first-party          = ["{{cookiecutter.package_name}}"]
force-sort-within-sections = true
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.mccabe]
max-complexity = 10

# ==============================================================================
# MYPY — static type checker
# ==============================================================================
[tool.mypy]
python_version         = "{{cookiecutter.python_version}}"
strict                 = true
ignore_missing_imports = true

# Reconcile strict mode with ANN401 (Any is permitted where annotated explicitly)
disallow_any_generics   = true   # List not OK — List[float] required
disallow_any_explicit   = false  # Explicit Any permitted (matches ANN401 allowance)
disallow_any_unimported = true   # No implicit Any from missing stubs
warn_return_any         = true   # Still warn when Any leaks out of a return type

# Useful extras for scientific code
warn_unreachable = true   # Dead branches after type narrowing (catches logic errors)
show_error_codes = true   # Include error codes so ignores can be precise
pretty           = true

# Per-module overrides — relax where stubs are genuinely unavailable
[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "astropy.*",
    "matplotlib.*",
    "sklearn.*",
    "h5py.*",
]
ignore_missing_imports = true
disallow_untyped_defs  = false   # These libraries often lack complete stubs

# ==============================================================================
# PYTEST
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = [
    "-ra",               # show short summary for all non-passing tests
    "--strict-markers",  # fail if an unknown marker is used
    "--tb=short",        # compact tracebacks
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "integration: marks integration tests that hit external resources",
    "unit: marks fast, isolated unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pkg_resources",
]

# ==============================================================================
# COVERAGE
# ==============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit   = [
    "src/**/conftest.py",
    "src/**/__main__.py",
    "scripts/*",
]

[tool.coverage.report]
fail_under   = 80
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@overload",
]

# ==============================================================================
# MKDOCS — reference notes (canonical config lives in docs/mkdocs.yml)
# ==============================================================================
# Stack:
#   theme      : Material for MkDocs, dark palette ("slate")
#   plugins    : mkdocstrings[python], search
#   docstring  : numpy (parsed by griffe)
#   math       : MathJax 3 via extra_javascript in docs/mkdocs.yml
#   src links  : enabled via mkdocstrings show_source = true
#
# Raw docstrings (r"""...""") MUST be used for any docstring containing LaTeX
# so that backslashes are not consumed by Python before MkDocs sees them.
#
# Canonical docstring example:
#
#   def hamiltonian(q: np.ndarray, p: np.ndarray) -> float:
#       r"""Compute the classical Hamiltonian :math:`H(q, p)`.
#
#       .. math::
#
#           H(q, p) = \frac{p^2}{2m} + V(q)
#
#       Parameters
#       ----------
#       q : np.ndarray
#           Generalised coordinates, shape ``(n_dof,)``.
#       p : np.ndarray
#           Conjugate momenta, shape ``(n_dof,)``.
#
#       Returns
#       -------
#       float
#           Total energy in Joules.
#
#       Notes
#       -----
#       Assumes SI units throughout.  For atomic units set ``m = 1``
#       and rescale :math:`V`.
#       """